# Coq-Equations

./: .gitignore  .merlin  .travis.yml  CHANGES.md  FAQ.md  Gemfile  Make  Makefile  Makefile.HoTT.local  Makefile.coq.local  Makefile.hott.local  Makefile.local  Makefile.rocq.local  README  README.dev  README.md  TODO  TODO.txt  _CoqProject  _HoTTProject  _config.yml  build.sh  buildHoTT.sh  configure.sh  coq-equations.opam  dune-project  equations-reloaded.md  equations.opam  examples.md  index.md  jscoq_footer.html  jscoq_header.html  makedoc.sh  news.md  polynomials.v  rocq-equations-examples.opam  rocq-equations-hott.opam  rocq-equations-tests.opam  rocq-equations.opam  rocq-equations.opam.old  (+1 more)
examples/: AlmostFull.v  Basics.v  Equations_Tutorial_VeriMag.v  Examples.AlmostFull.html  Examples.Basics.html  Examples.Equations_Tutorial_VeriMag.html  Examples.Fin.html  Examples.HoTT_light.html  Examples.MoreDep.html  Examples.POPLMark1a.html  Examples.RoseTree.html  Examples.STLC.html  Examples.accumulator.html  Examples.bove_capretta.html  Examples.definterp.html  Examples.definterp_scope.html  Examples.definterp_simple.html  Examples.function_iter_style.html  Examples.general_recursion.html  Examples.graph_complete.html  Examples.ho_finite_branching.html  Examples.misc.html  Examples.mutualwfrec.html  Examples.nested_mut_rec.html  Examples.nm.html  Examples.ordinals.html  Examples.polynomials.html  Examples.quicksort.html  Examples.string_matching.html  Examples.subterm_strict.html  Examples.views.html  Examples.wfrec.html  Examples.working_with_vectors.html  Fin.v  HoTT.v  HoTT_light.v  HoTT_light_type.v  Makefile  Makefile.local  MoreDep.v  (+34 more)
examples/disabled/: definterp_scope.v  definterp_simple.v  function_iter_style.v  misc.v  nm.v  quicksort.v
src/: META.coq-equations.in  META.rocq-equations.in  combined_scheme.ml  combined_scheme.mli  common.ml  context_map.ml  context_map.mli  covering.ml  covering.mli  depelim.ml  depelim.ml4  depelim.mli  derive.ml  derive.mli  dune  ederive.ml  ederive.mli  eqdec.ml  eqdec.ml4  eqdec.mli  equations.ml  equations.ml4  equations.mli  equations_common.ml  equations_common.ml4  equations_common.mli  equations_plugin.mllib  equations_plugin_mod.ml  extra_tactics.ml  extra_tactics.mli  g_equations.ml4  g_equations.mlg  inversion.ml  inversion.mli  noconf.ml  noconf.mli  noconf_hom.ml  noconf_hom.mli  principles.ml  principles.mli  (+16 more)
test-suite/: .lia.cache  Basics.v  BasicsDec.v  BasicsHoTT.v  Below.v  DataStruct.v  Inversion.v  LogicType.v  MoreDep.v  Noconfinv.v  Noconflet.v  _CoqProject  ack.v  agda_1408.v  agda_1775.v  agda_1775_full.v  attributes.v  cfold.v  compat_destruct.v  custom_depelim.v  daaa.v  dep_elim.v  depelim.v  divmod.v  dune  eqdec_error.v  f91.v  fin.v  fle_trans.v  funelim_ack.v  gcd.v  innacs.v  interval.v  le.v  letred.v  local_where.v  mfix.v  mutrec.v  mutrec_enc.v  nestedobls.v  (+31 more)
test-suite/HoTT/: BasicsHoTT.v
test-suite/disabled/: Noconflet.v  agda_1775_full.v  noconf_hom.v  scope_noK.v  smolka_inj_K2.v  square_elim.v  telescopes.v  telescopes_nonempty.v  univpoly.v
test-suite/issues/: 7.v  8.v  coq_pr_16995.v  guard.v  issue100.v  issue104.v  issue105.v  issue106.v  issue107.v  issue107_2.v  issue112.v  issue113.v  issue114.v  issue116.v  issue117.v  issue119.v  issue120.v  issue124.v  issue129.v  issue13.v  issue143.v  issue172.v  issue190.v  issue191.v  issue193.v  issue200.v  issue212.v  issue228.v  issue24.v  issue240.v  issue246.v  issue249.v  issue25.v  issue252.v  issue258.v  issue272.v  issue273.v  issue279.v  issue286.v  issue293.v  (+54 more)
theories/: AlmostFull.v  Below.v  Classes.v  Constants.v  ConstantsSProp.v  ConstantsType.v  CoreTactics.v  DepElim.v  DepElimDec.v  DepElimK.v  EqDec.v  EqDecInstances.v  Equations.v  Fin.v  FunctionalInduction.v  HSetInstances.v  HSets.v  HoTTUtil.v  IdDec.v  Init.v  Loader.v  LogicEqdep.v  LogicEqdepFacts.v  LogicJMeq.v  LogicProofIrrelevance.v  NoConfusion.v  NoConfusion_UIP.v  NoCycle.v  OpaqueEquations.v  ProgramEquality.v  SSubterm.v  Signature.v  Subterm.v  Tactics.v  Telescopes.v  TransparentEquations.v  Wellfounded_Type.v  dune
theories/HoTT/: All.v  Classes.v  Constants.v  DepElim.v  EqDec.v  EqDecInstances.v  FunctionalInduction.v  Loader.v  Logic.v  NoConfusion.v  Relation.v  Relation_Properties.v  Subterm.v  Tactics.v  Telescopes.v  WellFounded.v  WellFoundedInstances.v  dune
theories/Prop/: Classes.v  Constants.v  DepElim.v  EqDec.v  EqDecInstances.v  Equations.v  Loader.v  (+14 more)
(+803 files in other folders)
