opam-version: "2.0"
version: "8.16.dev"
authors: [ "Matthieu Sozeau <matthieu.sozeau@inria.fr>" "Cyprien Mangin <cyprien.mangin@m4x.org>" ]
dev-repo: "git+https://github.com/mattam82/Coq-Equations.git"
maintainer: "matthieu.sozeau@inria.fr"
homepage: "https://mattam82.github.io/Coq-Equations"
bug-reports: "https://github.com/mattam82/Coq-Equations/issues"
license: "LGPL-2.1-or-later"
synopsis: "A function definition package for Coq"
description: """
Equations is a function definition plugin for Coq, that allows the
definition of functions by dependent pattern-matching and well-founded,
mutual or nested structural recursion and compiles them into core
terms. It automatically derives the clauses equations, the graph of the
function and its associated elimination principle.
"""
tags: [
  "keyword:dependent pattern-matching"
  "keyword:functional elimination"
  "category:Miscellaneous/Coq Extensions"
  "logpath:Equations"
]
build: [
  ["./configure.sh"]
  [make "-j%{jobs}%"]
]
install: [
  [make "install"]
]
run-test: [
  [make "test-suite"]
]
depends: [
  "coq" { >= "8.16~" & < "8.17~" } 
  "ocamlfind" {build}
]
#depopts: [
#  "coq-hott" {= "8.13"}
#]
