(coq.theory
 ; This determines the -R flag
 (name Equations)
 (package equations)
 (synopsis "Equations Plugin")
 (libraries coq.plugins.extraction equations.plugin)
 (modules :standard \ IdDec NoCycle))

(include_subdirs qualified)
(dirs ("Prop" "Type"))
; Do not build the HoTT library part which requires -noinit -indices-matter